<resources>
    <string name="app_name">EffectiveMobileTest</string>
    <!-- Bottom Navigation -->
    <string name="label_home">Авиабилеты</string>
    <string name="label_hotels">Отели</string>
    <string name="label_destination">Короче</string>
    <string name="label_subscriptions">Подписки</string>
    <string name="label_profile">Профиль</string>

    <!-- Home -->
    <string name="title_home">Поиск дешевых\nавиабилетов</string>
    <string name="second_title_home">Музыкально отлететь</string>
    <string name="search_icon">Search icon</string>
    <string name="search_from_hint">Откуда - Москва</string>
    <string name="search_to_hint">Куда - Турция</string>
    <string name="offers_price">от</string>
    <string name="die_antwoord">Die Antwoord</string>
    <string name="budapest">Будапешт</string>
    <string name="_2200">от 2200 р</string>
    <string name="hard_route">Сложный \n маршрут</string>
    <string name="anywhere">Куда угодно</string>
    <string name="weekends">Выходные</string>
    <string name="hot_tickets">Горячие билеты</string>
    <string name="minsk">Минск</string>
    <string name="istanbul">Стамбул</string>
    <string name="sochi">Сочи</string>
    <string name="popular_direction">Популярное направление</string>
    <string name="Phuket">Пхукет</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="delete_icon">Delete icon</string>
    <string name="back">обратно</string>
    <string name="_24">24 фев, сб</string>
    <string name="filter">фильтр</string>
    <string name="econom">1, эконом</string>
    <string name="direct_flights">Прямые рейсы</string>
    <string name="show_all_tickets">Посмотреть все билеты</string>
    <string name="ural_airlines">Уральские авиалинии</string>
    <string name="_07_00">07:00</string>
    <string name="airlines_color">airlines color</string>
    <string name="_2_500">2 500 $</string>
    <string name="moscow_sochi">Москва-Сочи</string>
    <string name="prices_chart">График цен</string>
    <string name="toggle_button_filter">Фильтр</string>
    <string name="_6_990">6 990$</string>
    <string name="_03_15_07_10">03:15-07:10</string>
    <string name="dme">DME</string>
    <string name="aer">AER</string>
    <string name="_03_15">03:15</string>
    <string name="_07_10">07:10</string>
    <string name="dash">—</string>
    <string name="travel_time">4ч в пути</string>
    <string name="slash">/</string>
    <string name="no_transfers">Без пересадок</string>
    <string name="comfortable">Самый удобный</string>
    <string name="moscow">Москва</string>
    <string name="_23">23 февраля</string>
    <string name="_1">, 1 пассажир</string>
    <string name="nothing_here">Здесь ничего нет</string>

</resources>