<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingTop="10dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        style="@style/CardStyle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="21dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp"
        android:background="@color/dark_gray">

        <TextView
            android:id="@+id/ticket_price"
            style="@style/SemiboldText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="7dp"
            android:text="@string/_6_990"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/tickets_image"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="4dp"
            android:contentDescription="@string/airlines_color"
            android:src="@drawable/dot"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ticket_price"
            app:layout_constraintVertical_bias="0.727" />

        <TextView
            android:id="@+id/tickets_departure_time"
            style="@style/RegularItalicText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="52dp"
            android:text="@string/_03_15"
            app:layout_constraintStart_toEndOf="@id/tickets_image"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/dash"
            style="@style/RegularItalicText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="52dp"
            android:text="@string/dash"
            app:layout_constraintEnd_toStartOf="@+id/tickets_arrival_time"
            app:layout_constraintStart_toEndOf="@+id/tickets_departure_time"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tickets_arrival_time"
            style="@style/RegularItalicText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="68dp"
            android:layout_marginTop="52dp"
            android:text="@string/_07_10"
            app:layout_constraintStart_toEndOf="@id/tickets_image"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/code_from"
            style="@style/RegularItalicText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/dme"
            android:textColor="@color/bright_gray"
            app:layout_constraintStart_toEndOf="@id/tickets_image"
            app:layout_constraintTop_toBottomOf="@+id/tickets_departure_time" />

        <TextView
            android:id="@+id/code_to"
            style="@style/RegularItalicText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:layout_marginTop="8dp"
            android:text="@string/aer"
            android:textColor="@color/bright_gray"
            app:layout_constraintStart_toEndOf="@+id/code_from"
            app:layout_constraintTop_toBottomOf="@+id/tickets_arrival_time" />

        <TextView
            android:id="@+id/travel_time"
            style="@style/RegularText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/travel_time"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tickets_arrival_time"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.637" />

        <TextView
            android:id="@+id/slash"
            style="@style/RegularItalicText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="52dp"
            android:text="@string/slash"
            app:layout_constraintStart_toEndOf="@+id/travel_time"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/no_transfers"
            style="@style/RegularText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="@string/no_transfers"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/slash"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.637" />
    </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/badge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/dark_blue"
        style="@style/CardStyle"
        app:contentPadding="2dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/badge_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/comfortable"
            style="@style/RegularItalicText"/>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>