<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.ui.selected.SelectedCityFragment"
    android:background="@color/black">


    <androidx.cardview.widget.CardView
        android:id="@+id/cardView3"
        style="@style/CardStyle"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="15dp"
        app:cardBackgroundColor="@color/light_gray"
        app:cardElevation="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginStart="4dp"
                android:contentDescription="@string/search_icon"
                android:src="@drawable/arrow_back"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.544" />

            <EditText
                android:id="@+id/city_from"
                style="@style/RegularText"
                android:layout_width="0dp"
                android:layout_height="49dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="5dp"
                android:background="@null"
                android:hint="@string/search_from_hint"
                android:inputType="text|textCapWords"
                android:maxLines="1"
                android:textAppearance="@style/RegularText"
                android:textColorHint="@color/bright_gray"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/imageView"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.divider.MaterialDivider
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="45dp"
                android:layout_marginEnd="10dp"
                android:background="@color/bright_gray"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/city_from" />

            <EditText
                android:id="@+id/city_to"
                style="@style/RegularText"
                android:layout_width="0dp"
                android:layout_height="49dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="10dp"
                android:background="@null"
                android:hint="@string/search_to_hint"
                android:inputType="text|textCapWords"
                android:maxLines="1"
                android:textAppearance="@style/RegularText"
                android:textColorHint="@color/bright_gray"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/imageView" />

            <ImageView
                android:id="@+id/change_cities"
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:layout_marginEnd="24dp"
                android:layout_marginBottom="16dp"
                android:contentDescription="@string/delete_icon"
                android:src="@drawable/arrows"
                app:layout_constraintBottom_toBottomOf="@+id/city_from"
                app:layout_constraintEnd_toEndOf="@+id/city_from"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="1.0" />

            <ImageView
                android:id="@+id/delete"
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:layout_marginTop="14dp"
                android:layout_marginEnd="28dp"
                android:layout_marginBottom="24dp"
                android:contentDescription="@string/delete_icon"
                android:src="@drawable/remove_icon"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/city_to"
                app:layout_constraintVertical_bias="1.0" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <HorizontalScrollView
        android:id="@+id/horizontalScrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/cardView3">

        <com.google.android.material.chip.ChipGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="15dp"
            android:paddingTop="10dp"
            android:paddingEnd="15dp">

            <com.google.android.material.chip.Chip
                android:id="@+id/back_chip"
                android:textAppearance="@style/RegularItalicText"
                android:textColor="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/back"
                app:chipBackgroundColor="@color/light_gray"
                app:chipIcon="@drawable/plus_icon" />

            <com.google.android.material.chip.Chip
                android:id="@+id/date_chip"
                android:textAppearance="@style/RegularItalicText"
                android:textColor="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_24"
                app:chipBackgroundColor="@color/light_gray" />

            <com.google.android.material.chip.Chip
                android:textAppearance="@style/RegularItalicText"
                android:textColor="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/econom"
                app:chipBackgroundColor="@color/light_gray"
                app:chipIcon="@drawable/profile_icon" />

            <com.google.android.material.chip.Chip
                android:textAppearance="@style/RegularItalicText"
                android:textColor="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/filter"
                app:chipBackgroundColor="@color/light_gray"
                app:chipIcon="@drawable/filter_icon" />
        </com.google.android.material.chip.ChipGroup>
    </HorizontalScrollView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:layout_marginStart="15dp"
        app:cardBackgroundColor="@color/light_gray"
        app:cardCornerRadius="@dimen/card_corner_radius"
        app:layout_constraintTop_toBottomOf="@+id/horizontalScrollView"
        tools:layout_editor_absoluteX="29dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView"
                style="@style/SemiboldText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/direct_flights"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView"
                tools:listitem="@layout/tickets_offers"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/all_tickets_button"
        style="@style/ButtonAllTickets"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="15dp"
        android:layout_marginStart="15dp"
        android:text="@string/show_all_tickets"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView4" />

</androidx.constraintlayout.widget.ConstraintLayout>